unpackaged/main/default/objects/Otra_Relacion_Cobranza_Comercial__c/Otra_Relacion_Cobranza_Comercial__c.object-meta.xml
<CustomObject>
    <label>Otra Relación Cobranza Comercial</label>
    <nameField>
        <displayFormat>ORCC-{0000000000}</displayFormat>
        <label>Otra Relación Cobranza Comercial</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Otras Relaciones Cobranza Comercial</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>