unpackaged/main/default/objects/Otra_Relacion_Cobranza_Comercial__c/fields/Cobranza_Postventa__c.field-meta.xml
<CustomField>
    <fullName>Cobranza_Postventa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cobranza Postventa</label>
    <referenceTo>Cobranza_Postventa__c</referenceTo>
    <relationshipLabel>Otras Relaciones Cobranza Comercial</relationshipLabel>
    <relationshipName>Otras_Relaciones_Cobranza_Comercial</relationshipName>
    <type>Lookup</type>
</CustomField>