unpackaged/main/default/objects/Otra_Relacion_Cobranza_Comercial__c/fields/Lista_Precios_Promocion_Precio_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Lista_Precios_Promocion_Precio_Vivienda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista Precios Promoción Precio Vivienda</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Otras Relaciones Cobranza Comercial</relationshipLabel>
    <relationshipName>Otras_Relaciones_Cobranza_Comercial</relationshipName>
    <type>Lookup</type>
</CustomField>