unpackaged/main/default/objects/Otra_Relacion_Cobranza_Comercial__c/fields/Lista_Precios_Vivienda_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Lista_Precios_Vivienda_Vivienda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista Precios Vivienda Vivienda</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Otras Relaciones Cobranza Comercial (Lista Precios Vivienda Vivienda)</relationshipLabel>
    <relationshipName>Otras_Relaciones_Cobranza_Comercial1</relationshipName>
    <type>Lookup</type>
</CustomField>