unpackaged/main/default/objects/Otra_Relacion_Cobranza_Comercial__c/fields/Precio_Minimo_Solicitado__c.field-meta.xml
<CustomField>
    <fullName>Precio_Minimo_Solicitado__c</fullName>
    <formula>Lista_Precios_Promocion_Precio_Vivienda__r.Precio_Min_Solicitado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Mínimo Solicitado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>