unpackaged/main/default/objects/Otra_Relacion_Cobranza_Comercial__c/fields/Precio_Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Precio_Presupuesto__c</fullName>
    <formula>Lista_Precios_Vivienda_Vivienda__r.Precio_Presupuesto_F__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Presupuesto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>