unpackaged/main/default/objects/Otra_Relacion_Cobranza_Comercial__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>